--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "helpful app",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.15.1",
     "express-handlebars": "^3.0.0",
     "geolocation": "^0.2.0",
     "google-maps-api": "^2.0.1",
     "lodash": "^4.12.0",
     "method-override": "^2.3.5",
+    "morgan": "^1.7.0",
+    "node-geocoder": "^3.10.0",
     "nonce": "^1.0.3",
     "oauth-signature": "^1.3.1",
     "querystring": "^0.2.0",
