--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.3.0",  
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.13.0",
+    "geocoder": "^0.2.2",
     "method-override": "^2.3.5",
+    "morgan": "^1.7.0",
     "mysql": "^2.10.2",
+    "node-geocoder": "^3.10.0",
     "sequelize": "^3.23.0"
   },
   "devDependencies": {
